--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,7 +1,7 @@
-NAME = HiThisIsBrain
+NAME = Braiiiiiiiiiiiiiiiiiiinnnnnnnnnnnnzzzzzzz
 CC = g++ -o -g
 CFLAGZ = -Wall -Wextra -Werror -std=c++98
-SRCS = 	main.cpp
+SRCS = 	main.cpp Zombie.cpp newZombie.cpp randomChump.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
@@ -12,6 +12,7 @@ all: $(NAME)
 
 $(NAME): $(OBJS)
 	$(CC)	$(CFLAGZ)	-o	$(NAME)	$(OBJS) 
+
 
 clean:
 	rm -f $(OBJS) 
