--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,7 +1,7 @@
-NAME = Braiiiiiiiiiiiiiiiiiiinnnnnnnnnnnnzzzzzzz
+NAME = MoooarBraiinnnz
 CC = g++ -o -g
 CFLAGZ = -Wall -Wextra -Werror -std=c++98
-SRCS = 	main.cpp Zombie.cpp newZombie.cpp randomChump.cpp
+SRCS = 	main.cpp Zombie.cpp zombieHorde.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
