finished cpp1 with bonus

--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,11 +1,11 @@
-NAME = Braiiiiiiiiiiiiiiiiiiinnnnnnnnnnnnzzzzzzz
+NAME = BraiiiiiiinnnzzzZ
 CC = g++ -o -g
 CFLAGZ = -Wall -Wextra -Werror -std=c++98
 SRCS = 	main.cpp Zombie.cpp newZombie.cpp randomChump.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
-%.o: %.c
+%.o: %.cpp
 	$(CC) $(CFLAGZ) -g -c $< -o $@
 
 all: $(NAME)
