--- a/ex05/Makefile
+++ b/ex05/Makefile
@@ -1,11 +1,11 @@
 NAME = HARL_2.0
 CC = g++ -o -g
-CFLAGZ = -Wall -Wextra -Werror -std=c++98 -Iinclude
+CFLAGZ = -Wall -Wextra -Werror -std=c++98 -Iinclude -trigraphs
 SRCS = 	main.cpp Harl.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
-%.o: %.c
+%.o: %.cpp
 	$(CC) $(CFLAGZ) -g -c $< -o $@
 
 all: $(NAME)
